# container-volume-forecasting-ml

./: .gitignore  404.html  Dockerfile  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
architecture/: index.html
confidentiality/: index.html
dashboard/: streamlit_app.py
data/: README.md
data/synthetic/: synthetic_container_volume.csv
docs/: architecture.md  confidentiality.md  index.md  methodology.md  model_design.md
methodology/: index.html
model_design/: index.html
notebooks/: README.md
reports/: model_results.csv  predictions_elastic_net_external.csv  predictions_linear_regression_internal.csv  predictions_seasonal_naive.csv  predictions_xgboost_internal_only.csv  predictions_xgboost_with_external_indicators.csv
search/: search_index.json
src/container_forecasting/: config.py
src/container_forecasting/data/: make_synthetic_data.py
src/container_forecasting/evaluation/: metrics.py
src/container_forecasting/features/: build_features.py
src/container_forecasting/models/: baselines.py  train.py
src/container_forecasting/visualization/: plot_results.py
tests/: test_features.py  test_metrics.py  test_synthetic_data.py
