[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "container-volume-forecasting-ml"
version = "0.1.0"
description = "Public-safe ML project for anonymized container-volume forecasting"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Prateek Kalra" }
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "matplotlib>=3.9",
    "streamlit>=1.37",
    "joblib>=1.4"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
    "black>=24.4"
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
